<?xml version="1.0"?>
<package format="2">
  <name>dalislam_to_hdmapping</name>
  <version>0.0.1</version>
  <description>Convert recorded DALI_SLAM (DA-LIO) odometry bag to HDMapping session format</description>
  <maintainer email="januszbedkowski@gmail.com">Janusz Bedkowski</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>pcl_conversions</depend>
</package>
